fix: z-index bug on backdrop

--- a/src/Backdrop/styles.css
+++ b/src/Backdrop/styles.css
@@ -1,8 +1,5 @@
-.backdrop_container {
-  z-index: 1000;
-}
-
 .backdrop {
+  z-index: 1000;
   background-color: #000000;
   opacity: 0.7;
   position: fixed;
